--- a/Cpp/CodingInterview/3. DuplicationInArray/3. DuplicationInArray.md
+++ b/Cpp/CodingInterview/3. DuplicationInArray/3. DuplicationInArray.md
@@ -1,6 +1,131 @@
 # 面试题3: 数组中重复的数字
-## 题目一：找出数组中重复的数字
-在一个长度为n的数组的所有数字都在0到n-1的范围内。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。例如，如果输入长度为7的数组[2, 3, 1, 0, 2, 5, 3]，那么对应的输出是重复的数字2或者3。
+## 题目1：找出数组中重复的数字
+* 给定一个长度为 n 的整数数组 nums，数组中所有的数字都在 0∼n−1 的范围内。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。请找出数组中任意一个重复的数字。
 
-## 题目二：不修改数组找出重复的数字
-在一个长度为n+1的数组里的所有数字都在1到n的范围内，所以数组中至少有一个数字是重复的。请找出数组中任意一个重复的数字，但不能修改输入的数组。例如，如果输入长度为8的数组[2, 3, 5, 4, 3, 2, 6, 7],那么对应的输出是重复的数字2或者3。
+- 样例  
+  给定 nums = [2, 3, 5, 4, 3, 2, 6, 7]。返回 2 或 3。
+
+- 基础解法:  
+排序: O(nlgn) O(1) 
+哈希表: O(n) O(n)
+
+```
+//最优解法：
+bool duplicate(int numbers[], int length, int * duplication){
+    if (numbers == nullptr || lenght <= 0){
+        return false;
+    }
+    for(int i = 0; i <length; ++i){
+        if(numbers[i]<0 || numbers[i] > length-1){
+            while(numbers[i] != i){
+                if(numbers[i] == numbers[numbers[i]]){
+                    *duplcation = numbers[i];
+                    return true;
+                }
+
+                // swap numbers[i] and numbers[numbers[i]]
+                int temp = numbers[i];
+                numbers[i] = numbers[temp];
+                numbers[temp] = temp;
+            }
+        }
+    return false;
+    }
+}
+```
+* 在上述代码中，找到的重复数字通过参数 duplication 传给函数的调用者，而函数的返回值表示数组中是否有重复的数组。当输入的数组中存在重复的数字时，返回true；否则返回false。
+  
+```
+// ====================测试代码====================
+bool contains(int array[], int length, int number)
+{
+    for(int i = 0; i < length; ++i)
+    {
+        if(array[i] == number)
+            return true;
+    }
+
+    return false;
+}
+
+void test(char* testName, int numbers[], int lengthNumbers, int expected[], int expectedExpected, bool validArgument)
+{
+    printf("%s begins: ", testName);
+
+    int duplication;
+    bool validInput = duplicate(numbers, lengthNumbers, &duplication);
+
+    if(validArgument == validInput)
+    {
+        if(validArgument)
+        {
+            if(contains(expected, expectedExpected, duplication))
+                printf("Passed.\n");
+            else
+                printf("FAILED.\n");
+        }
+        else
+            printf("Passed.\n");
+    }
+    else
+        printf("FAILED.\n");
+}
+
+// 重复的数字是数组中最小的数字
+void test1()
+{
+    int numbers[] = { 2, 1, 3, 1, 4 };
+    int duplications[] = { 1 };
+    test("Test1", numbers, sizeof(numbers) / sizeof(int), duplications, sizeof(duplications) / sizeof(int), true);
+}
+
+// 重复的数字是数组中最大的数字
+void test2()
+{
+    int numbers[] = { 2, 4, 3, 1, 4 };
+    int duplications[] = { 4 };
+    test("Test2", numbers, sizeof(numbers) / sizeof(int), duplications, sizeof(duplications) / sizeof(int), true);
+}
+
+// 数组中存在多个重复的数字
+void test3()
+{
+    int numbers[] = { 2, 4, 2, 1, 4 };
+    int duplications[] = { 2, 4 };
+    test("Test3", numbers, sizeof(numbers) / sizeof(int), duplications, sizeof(duplications) / sizeof(int), true);
+}
+
+// 没有重复的数字
+void test4()
+{
+    int numbers[] = { 2, 1, 3, 0, 4 };
+    int duplications[] = { -1 }; // not in use in the test function
+    test("Test4", numbers, sizeof(numbers) / sizeof(int), duplications, sizeof(duplications) / sizeof(int), false);
+}
+
+// 没有重复的数字
+void test5()
+{
+    int numbers[] = { 2, 1, 3, 5, 4 };
+    int duplications[] = { -1 }; // not in use in the test function
+    test("Test5", numbers, sizeof(numbers) / sizeof(int), duplications, sizeof(duplications) / sizeof(int), false);
+}
+
+// 无效的输入
+void test6()
+{
+    int* numbers = nullptr;
+    int duplications[] = { -1 }; // not in use in the test function
+    test("Test6", numbers, 0, duplications, sizeof(duplications) / sizeof(int), false);
+}
+
+void main()
+{
+    test1();
+    test2();
+    test3();
+    test4();
+    test5();
+    test6();
+}
+```
