fix code representation

--- a/Cpp/CodingInterview/3. DuplicationInArray/3. DuplicationInArray.md
+++ b/Cpp/CodingInterview/3. DuplicationInArray/3. DuplicationInArray.md
@@ -9,7 +9,7 @@
 排序: O(nlgn) O(1) 
 哈希表: O(n) O(n)
 
-```
+```cpp
 //最优解法：
 bool duplicate(int numbers[], int length, int * duplication){
     if (numbers == nullptr || lenght <= 0){
@@ -35,7 +35,7 @@ bool duplicate(int numbers[], int length, int * duplication){
 ```
 * 在上述代码中，找到的重复数字通过参数 duplication 传给函数的调用者，而函数的返回值表示数组中是否有重复的数组。当输入的数组中存在重复的数字时，返回true；否则返回false。
   
-```
+```cpp
 // ====================测试代码====================
 bool contains(int array[], int length, int number)
 {
