--- a/Cpp/CodingInterview/4. FindInPartiallySortedMatrix/4. FindInPartiallySortedMatrix.md
+++ b/Cpp/CodingInterview/4. FindInPartiallySortedMatrix/4. FindInPartiallySortedMatrix.md
@@ -19,7 +19,7 @@
 - 单调性扫描: O($m+n$)  
 首先选取数组中右上角的数字。如果该数字等于要查找的数字，则查找过程结束；如果该数字大于要查找的数字，则剔除这个数字所在的列；如果该数字小于要查找的数，则剔除该数字所在的行。直到找到要查找的数字，或者查找范围为空。
 
-```
+```cpp
 //最优解法：O(n)
 bool find(int *matrix, int rows, int columns, int number){
     bool found = false;
