--- a/Cpp/CodingInterview/5. ReplaceSpaces/5. ReplaceSpaces.md
+++ b/Cpp/CodingInterview/5. ReplaceSpaces/5. ReplaceSpaces.md
@@ -9,7 +9,7 @@
    1. 线性扫描从前往后替换 每逢空格移位填充 O(n^2)  
    2. 双指针从后往前填充 先统计最终长度，然后采用双指针，指向各自的末尾填充 O(n)  
 
-```
+```cpp
 //最优解法：从后往前替换 O(n)
 /*length 为字符数组str的总容量，大于或等于字符串str的实际长度*/
 void ReplaceBlank(char str[], int length)
