--- a/Cpp/CodingInterview/6. PrintListInReversedOrder/6. PrintListInReversedOrder.md
+++ b/Cpp/CodingInterview/6. PrintListInReversedOrder/6. PrintListInReversedOrder.md
@@ -1,6 +1,6 @@
 # 面试题6: 从尾到头打印链表
 * 输入一个链表的头节点，从尾到头反过来打印出每个节点的值。链表节点定义如下:  
-  ```
+  ```cpp
   struct ListNode{
       int m_nKey;
       ListNode* m_pNext;
@@ -15,7 +15,7 @@
   1. 利用栈先进后出的性质，迭代实现。  
   2. 利用递归在本质上是栈结构，递归实现。
  
-```
+```cpp
 //栈迭代实现
 void PrintListReversingly_Iteratively(ListNode* pHead)
 {
