--- a/Cpp/CodingInterview/8. NextNodeInBinaryTrees/8. NextNodeInBinaryTrees.md
+++ b/Cpp/CodingInterview/8. NextNodeInBinaryTrees/8. NextNodeInBinaryTrees.md
@@ -1,6 +1,6 @@
 # 面试题8: 二叉树的下一个节点
 * 给定一颗二叉树和其中一个节点。如何找出中序遍历序列的下一个节点？树中的节点出了有两个分别指向左、右子节点的指针，还有一个指向父节点的指针。  
-    ```
+    ```cpp
     struct BinaryTreeNode
     {
         int m_nValue;
@@ -19,7 +19,7 @@
   2. 待查节点无右子树，且处在父亲节点的左分支，那么它的下一个节点就是它的父节点。
   3. 待查节点无右子树，且处在父亲节点的右分支，那么可以沿着指向父节点的指针一直向上遍历，知道找到一个是它父节点的左子节点的节点。如果这样的节点存在，那么这个节点的父节点就是我们要找的下一个节点。
   
-```
+```cpp
 //分情况讨论
 BinaryTreeNode* GetNext(BinaryTreeNode* pNode)
 {
