--- a/Cpp/CodingInterview/7. ConstructBinaryTree/7. ConstructBinaryTree.md
+++ b/Cpp/CodingInterview/7. ConstructBinaryTree/7. ConstructBinaryTree.md
@@ -1,6 +1,6 @@
 # 面试题7: 重建二叉树
 * 输入某二叉树的前序遍历和中序遍历的结果，请重建该二叉树。假设输入的前序遍历和中序遍历的结果中都不含重复的数字。二叉树节点的定义如下：  
-    ```
+    ```cpp
     struct BinaryTreeNode{
      int m_nValue;
      BinaryTreeNode* m_pLeft;
@@ -23,7 +23,7 @@
 - 基础解法：  
   1. 利用前序遍历和中序遍历的性质求解：前序根划分中序左右，递归建立左右子树。O(n) 
 
-```
+```cpp
 BinaryTreeNode* Construct(int* preorder, int* inorder, int length)
 {
     if(preorder == nullptr || inorder == nullptr || length <= 0)
